<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email Address</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, a password and an email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="edit_friends_label">Edit friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="ERROR_TITLE">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry, there was an error</string>
    <string name="video_files_size_warning">The selected video must be less than 10MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large, select a new file</string>

    <string-array name="camera_choices">
        <item name="take_picture">Take Picture</item>
        <item name="take_video">Take Video</item>
        <item name="choose_picture">Choose Picture</item>
        <item name="choose_video">Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="send">Send</string>
    <string name="error_selecting_file">There was an error with the selected file. Please try a different file</string>
    <string name="error_sorry">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="login_subtitle">A Treehouse Project</string>
    <string name="login_app_title">Ribbit</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="description_button_divider">Button Divider</string>
    <string name="success">Success</string>
    <string name="loading">Loading...</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>

</resources>
