<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adambennett.ribbit.app.ui.LoginActivity">

<ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/AuthTitle.AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/etUsernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint" />

        <requestFocus />

        <EditText
            android:id="@+id/etPasswordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />


    </LinearLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/bLogin"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_custom"
        android:text="@string/login_button_label"
        custom:colorComplete="@color/green_complete"
        custom:colorNormal="@color/light_purple_button"
        custom:colorPressed="@color/pressed_purple_button"
        custom:colorProgress="@color/purple_progress"
        custom:completeText="@string/success"
        custom:progressText="@string/loading" />


    <TextView
        android:id="@+id/tvSignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />


</RelativeLayout>
